[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/PlayerMutant.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/NightBorne/NightBorne.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/SuperGrottoEScape Audio Music Files/SuperGrottoEscape.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=74]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.55, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
} ]
}

[sub_resource type="Animation" id=71]
resource_name = "idle"
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=73]
resource_name = "on_hit"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 69, 70, 71, 72, 73 ]
}

[sub_resource type="Animation" id=72]
resource_name = "walk"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="CapsuleShape2D" id=68]
radius = 7.0

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 19, 18 )

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 18, 18 )

[node name="PlayerMutant" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )
hframes = 23
vframes = 5

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
smoothing_speed = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 30 )
anims/attack = SubResource( 74 )
anims/idle = SubResource( 71 )
anims/on_hit = SubResource( 73 )
anims/walk = SubResource( 72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 13 )
shape = SubResource( 68 )

[node name="RightPosition2D" type="Position2D" parent="."]
position = Vector2( 18, 4 )

[node name="LeftPosition2D" type="Position2D" parent="."]
position = Vector2( -18, 4 )

[node name="Detector" type="Area2D" parent="."]
position = Vector2( 39, 10 )
collision_layer = 0
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( -2, 0 )
shape = SubResource( 69 )

[node name="AttackDetector" type="Area2D" parent="."]
position = Vector2( 13, 2 )
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 24, 8 )
shape = SubResource( 70 )

[node name="TaskLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = -73.0
margin_right = 127.0
margin_bottom = -59.0
text = "Get 1 melee kill"

[node name="HealthLabel" type="Label" parent="."]
margin_left = -127.0
margin_top = -74.0
margin_right = -69.0
margin_bottom = -60.0
text = "Health: 3"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
autoplay = true

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
